# node-based-image-processor

./: CMakeLists.txt  README.md
src/: App.cpp  App.h  BlendNode.cpp  BlendNode.h  BlurNode.cpp  BlurNode.h  BrightnessContrastNode.cpp  BrightnessContrastNode.h  ColorChannelSplitterNode.cpp  ColorChannelSplitterNode.h  ConvolutionFilterNode.cpp  ConvolutionFilterNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  ImageInputNode.cpp  ImageInputNode.h  NodeBase.h  NoiseGenerationNode.cpp  NoiseGenerationNode.h  OpenGLHelper.h  OutputNode.cpp  OutputNode.h  ThresholdNode.cpp  ThresholdNode.h  main.cpp
